--- a/RoslynPlay/RoslynPlay.csproj
+++ b/RoslynPlay/RoslynPlay.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="GitRef.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="2.7.0" />
+    <PackageReference Include="Microsoft.Net.Compilers" Version="2.7.0" />
+  </ItemGroup>
+
 </Project>
