--- a/RoslynPlay/RoslynPlay.csproj
+++ b/RoslynPlay/RoslynPlay.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="EPPlus" Version="4.5.1" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="2.7.0" />
     <PackageReference Include="Microsoft.Net.Compilers" Version="2.7.0" />
+    <PackageReference Include="StemmersNet" Version="1.1.1" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.4.0" />
   </ItemGroup>
 
