--- a/RoslynPlay/RoslynPlay.csproj
+++ b/RoslynPlay/RoslynPlay.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.1" />
+    <PackageReference Include="ExcelDataReader" Version="3.4.0" />
+    <PackageReference Include="ExcelDataReader.DataSet" Version="3.4.0" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="2.7.0" />
     <PackageReference Include="Microsoft.Net.Compilers" Version="2.7.0" />
     <PackageReference Include="StemmersNet" Version="1.1.1" />
