--- a/CommentsAnalysis/CommentsAnalysis.csproj
+++ b/CommentsAnalysis/CommentsAnalysis.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Results\" />
+  </ItemGroup>
+
 </Project>
